# flake8-import-policy

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  flake8_import_policy.py  pyproject.toml
.github/workflows/: python-package.yml
flake8_import_policy/: __init__.py  config.py  plugin.py
tests/: conftest.py  test_import_policy.py
tests/data/: everything_disabled.toml  everything_enabled.toml
tests/local_package/: __init__.py  module.py
