[tool.poetry]
name = "flake8-import-policy"
version = "0.1.0"
description = "Flake8 plugin to validate that code follows import policies"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flake8 = ">=3.7"
isort = ">=1"
toml = "^0.10.2"

[tool.poetry.plugins."flake8.extension"]
"FIP" = "flake8_import_policy.plugin:Plugin"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
flake8-pyproject = "^1.2.3"
mypy = "^1.5.1"
pre-commit = "^3.4.0"
pytest = "^7.4.2"
types-toml = "^0.10.8.7"

[tool.black]
skip-string-normalization = true

[tool.isort]
profile = "black"
lines_after_imports = 2

[tool.flake8]
ignore = ["E501", "W503"]

[tool.flake8-import-policy]
stdlib = ["absolute"]
third-party = ["absolute", "from_module"]
local = ["absolute", "from_module"]
sibling = ["from_module"]

[tool.flake8-import-policy.overrides]
datetime = ["from_member"]

[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_defs = true
disallow_untyped_calls = true
warn_unused_ignores = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
